CI: Add Checkstyle check in Build JAR stage
Add Checkstyle validation before building JARs.
Build fails early if code doesn't meet Google Java Style requirements.
Prevents style violations from being merged to main.

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -57,6 +57,9 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      - name: Run Checkstyle
+        run: mvn checkstyle:check -B
+
       - name: Build JARs (multi-module)
         run: mvn clean package -DskipTests -B
 
